--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,7 +3,7 @@ on:
     branches: [ master ]
 
 jobs:
-  deploy-book:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -26,9 +26,10 @@ jobs:
         name: _build
         path: _build
 
-  check-spelling:
+  spelling:
+    runs-on: ubuntu-latest
     needs:
-      - deploy-book
+      - build
     steps:
       - uses: actions/checkout@v2
 
@@ -49,9 +50,10 @@ jobs:
         run: |
           bash .ci_support/check_spelling.sh
 
-  check-links:
+  links:
+    runs-on: ubuntu-latest
     needs:
-      - deploy-book
+      - build
     steps:
       - uses: actions/checkout@v2
 
