more work on script output

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -72,6 +72,5 @@ jobs:
       - run: |
           pip install -U pytest-check-links requests_cache
 
-      - shell: bash -l {0}
-        run: |
+      - run: |
           bash .ci_support/check_links.sh
