try without mamba

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -40,13 +40,11 @@ jobs:
 
       - uses: goanpeca/setup-miniconda@v1.6.0
         with:
-          mamba-version: "*"
           channels: conda-forge
-          channel-priority: true
 
       - shell: bash -l {0}
         run: |
-          mamba install -yc conda-forge hunspell-en
+          conda install -yc conda-forge hunspell-en
 
       - shell: bash -l {0}
         run: |
